# forensic-db

./: .gitignore  Cargo.toml  README.md  opencode.json
.github/workflows/: cleanliness.yaml  rust-tests.yaml
.nightshift/: agents.md  opencode-installation.md
.nightshift/commands/: docs-cleanup.md  docs-index.md  git-brain-commit.md  new-module-development.md
.nightshift/hooks/: pre-push
.nightshift/nags/: rust-nag.md
.nightshift/scripts/: check-docs.js
.nightshift/state/: forward-prompt.md  nag-status.json
.nightshift/templates/agents/: post-install-checklist.md
docs/: README.md  architecture.md  configuration.md  developer-guide.md  documentation-rules.md  getting-started.md  local-testing.md  project-index.md  source-index.md  user-guide.md
docs/cql/: README.md
docs/development/: developer-guide.md  local-testing.md  project-index.md
docs/product/: getting-started.md  user-guide.md
docs/specs/: cloud-storage-streaming.md  rclone-tools.md
docs/technical/: api-reference.md  cli-reference.md  configuration.md  sample-cql.md
docs/technical/cql/: README.md  account_exclusive_trading.cql  cycling_coins_between_pairs.cql  find_pump_stats.cql  find_shill_in_range.cql  find_top_exchange_depositors.cql  find_top_shill.cql  frequent_exchange_traders.cql  shill_trader_pairs.cql  top_exchange_funding_required.cql  trace_owner.cql
scripts/: inspect_cf_mirror.sh
src/: README.md  batch_tx_type.rs  cypher_templates.rs  decode_entry_function.rs  enrich_exchange_onboarding.rs  enrich_whitepages.rs  extract_exchange_orders.rs  extract_snapshot.rs  extract_transactions.rs  json_rescue_v5_extract.rs  json_rescue_v5_load.rs  lib.rs  load.rs  load_account_state.rs  load_exchange_orders.rs  load_tx_cypher.rs  main.rs  neo4j_init.rs  queue.rs  read_tx_chunk.rs  scan.rs  schema_account_state.rs  schema_exchange_orders.rs  schema_transaction.rs  unzip_temp.rs  util.rs  v5_rpc_to_raw.rs  warehouse_cli.rs
src/analytics/: README.md  enrich_account_funding.rs  enrich_rms.rs  exchange_stats.rs  mod.rs  offline_matching.rs
tests/: README.md  test_extract_transactions.rs  test_json_rescue_v5_load.rs  test_json_rescue_v5_parse.rs  test_load_tx.rs  test_unzip.rs
tests/experimental/: README.md
tests/fixtures/: README.md
tests/support/: README.md
