[package]
name = "libra-forensic-db"
authors = ["libra contributors"]
edition = "2021"
homepage = "https://openlibra.io/"
license = "NOASSERTION"
publish = false
repository = "https://github.com/0LNetworkCommunity/forensic-db"
rust-version = "1.78.0"
version = "0.0.1"

[dependencies]
anyhow = "^1.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
diem-temppath = { git = "https://github.com/0LNetworkCommunity/diem.git", branch = "release" }
diem-types = { git = "https://github.com/0LNetworkCommunity/diem.git", branch = "release" }
diem-backup-cli = { git = "https://github.com/0LNetworkCommunity/diem.git", branch = "release" }
diem-crypto = { git = "https://github.com/0LNetworkCommunity/diem.git", branch = "release" }
env_logger = "^0.11"
flate2 = "^1.0"
glob = "^0.3"
libra-backwards-compatibility =  { git = "https://github.com/0LNetworkCommunity/libra-framework.git", branch = "main" }
libra-cached-packages =  { git = "https://github.com/0LNetworkCommunity/libra-framework.git", branch = "main" }
libra-storage =  { git = "https://github.com/0LNetworkCommunity/libra-framework.git", branch = "main" }
libra-types =  { git = "https://github.com/0LNetworkCommunity/libra-framework.git", branch = "main" }
log = "^0.4"
neo4rs = "0.8.0"
once_cell = "^1.2"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = { version = "^1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
tar = "0.4.43"
smooth-json = "0.2.7"
futures = "0.3.31"

[dev-dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "migrate", "macros", "derive", "postgres"] }
testcontainers = "^0.15"

# uses a profile similar to `cli` in Diem/Cargo.toml
# optimized for performance and size
# if you are hunting bugs, this is not the profile to use.
[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
debug = false     # remove debug on compile
strip = true      # strip debug and symbols for size

[profile.bench]
debug = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
lto = false
incremental = true

[profile.test]
inherits = "dev"
